# kbrd_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.adoc
.github/workflows/: build.yml  cmake.yml  linter.yml  linters.yml  static_analysis.yml
include/: ChipException.h  Color.h  operator_uc.h
include/impl/: ControllerImpl.h  ModelImpl.h  ViewImpl.h
include/interfaces/: IController.h  IModel.h  IView.h
src/: Controller.cpp  Model.cpp  View.cpp  main.cpp
src/impl/: ControllerImpl.cpp  ModelImpl.cpp  ViewImpl.cpp
test/: ControllerImplTest.cpp  FakeHidapi.cpp  MockHidApi.hh  test.cpp
